writingMachine/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TURNLEFT
    TURNRIGHT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement SEMI
Rule 2     program -> statement
Rule 3     program -> program statement SEMI
Rule 4     program -> program statement
Rule 5     statement -> expression
Rule 6     statement -> def_statement
Rule 7     statement -> put_statement
Rule 8     statement -> add_statement
Rule 9     statement -> continueup_statement
Rule 10    statement -> continuedown_statement
Rule 11    statement -> continueright_statement
Rule 12    statement -> continueleft_statement
Rule 13    statement -> pos_statement
Rule 14    statement -> posx_statement
Rule 15    statement -> posy_statement
Rule 16    statement -> usecolor_statement
Rule 17    statement -> down_statement
Rule 18    statement -> up_statement
Rule 19    statement -> beginning_statement
Rule 20    statement -> for_statement
Rule 21    statement -> case_statement
Rule 22    statement -> repeat_statement
Rule 23    statement -> while_statement
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression MULT_OP expression
Rule 27    expression -> expression DIV_OP expression
Rule 28    expression -> expression LT expression
Rule 29    expression -> expression GT expression
Rule 30    expression -> expression EQUALS expression
Rule 31    def_statement -> DEF LPAREN ID COMMA statement RPAREN
Rule 32    put_statement -> PUT LPAREN ID COMMA statement RPAREN
Rule 33    add_statement -> ADD LPAREN ID RPAREN
Rule 34    add_statement -> ADD LPAREN ID COMMA statement RPAREN
Rule 35    continueup_statement -> CONTINUEUP statement
Rule 36    continuedown_statement -> CONTINUEDOWN statement
Rule 37    continueright_statement -> CONTINUERIGHT statement
Rule 38    continueleft_statement -> CONTINUELEFT statement
Rule 39    pos_statement -> POS LPAREN statement COMMA statement RPAREN
Rule 40    posx_statement -> POSX statement
Rule 41    posy_statement -> POSY statement
Rule 42    usecolor_statement -> USECOLOR statement
Rule 43    down_statement -> DOWN
Rule 44    up_statement -> UP
Rule 45    beginning_statement -> BEGINNING
Rule 46    expression -> EQUAL LPAREN statement COMMA statement RPAREN
Rule 47    expression -> AND LPAREN statement COMMA statement RPAREN
Rule 48    expression -> OR LPAREN statement COMMA statement RPAREN
Rule 49    expression -> GREATER LPAREN statement COMMA statement RPAREN
Rule 50    expression -> SMALLER LPAREN statement COMMA statement RPAREN
Rule 51    expression -> SUBSTR LPAREN statement COMMA statement RPAREN
Rule 52    expression -> RANDOM LPAREN statement RPAREN
Rule 53    expression -> MULT LPAREN statement COMMA statement RPAREN
Rule 54    expression -> DIV LPAREN statement COMMA statement RPAREN
Rule 55    expression -> SUM LPAREN statement COMMA statement RPAREN
Rule 56    expression -> LPAREN expression_list RPAREN
Rule 57    expression_bracket -> LBRACKET expression_list RBRACKET
Rule 58    expression_bracket -> LBRACKET expression_list SEMI RBRACKET
Rule 59    expression -> BOOLEAN
Rule 60    expression_list -> statement
Rule 61    expression_list -> expression_list statement
Rule 62    expression -> NUMBER
Rule 63    expression -> ID
Rule 64    for_statement -> FOR ID LPAREN expression TO expression RPAREN LOOP LBRACKET program RBRACKET END LOOP
Rule 65    execute_statement -> statement
Rule 66    case_statement -> CASE ID when_clauses END CASE
Rule 67    case_statement -> CASE ID when_clauses ELSE LBRACKET program RBRACKET END CASE
Rule 68    when_clauses -> when_clause
Rule 69    when_clauses -> when_clauses when_clause
Rule 70    when_clause -> WHEN expression THEN LBRACKET program RBRACKET
Rule 71    repeat_statement -> REPEAT LBRACKET program RBRACKET UNTIL LBRACKET program RBRACKET
Rule 72    while_statement -> WHILE LBRACKET program RBRACKET LBRACKET program RBRACKET WHEND

Terminals, with rules where they appear

ADD                  : 33 34
AND                  : 47
BEGINNING            : 45
BOOLEAN              : 59
CASE                 : 66 66 67 67
COMMA                : 31 32 34 39 46 47 48 49 50 51 53 54 55
CONTINUEDOWN         : 36
CONTINUELEFT         : 38
CONTINUERIGHT        : 37
CONTINUEUP           : 35
DEF                  : 31
DIV                  : 54
DIV_OP               : 27
DOWN                 : 43
ELSE                 : 67
END                  : 64 66 67
EQUAL                : 46
EQUALS               : 30
FOR                  : 64
GREATER              : 49
GT                   : 29
ID                   : 31 32 33 34 63 64 66 67
LBRACKET             : 57 58 64 67 70 71 71 72 72
LOOP                 : 64 64
LPAREN               : 31 32 33 34 39 46 47 48 49 50 51 52 53 54 55 56 64
LT                   : 28
MINUS                : 25
MULT                 : 53
MULT_OP              : 26
NUMBER               : 62
OR                   : 48
PLUS                 : 24
POS                  : 39
POSX                 : 40
POSY                 : 41
PUT                  : 32
RANDOM               : 52
RBRACKET             : 57 58 64 67 70 71 71 72 72
REPEAT               : 71
RPAREN               : 31 32 33 34 39 46 47 48 49 50 51 52 53 54 55 56 64
SEMI                 : 1 3 58
SMALLER              : 50
SUBSTR               : 51
SUM                  : 55
THEN                 : 70
TO                   : 64
TURNLEFT             : 
TURNRIGHT            : 
UNTIL                : 71
UP                   : 44
USECOLOR             : 42
WHEN                 : 70
WHEND                : 72
WHILE                : 72
error                : 

Nonterminals, with rules where they appear

add_statement        : 8
beginning_statement  : 19
case_statement       : 21
continuedown_statement : 10
continueleft_statement : 12
continueright_statement : 11
continueup_statement : 9
def_statement        : 6
down_statement       : 17
execute_statement    : 
expression           : 5 24 24 25 25 26 26 27 27 28 28 29 29 30 30 64 64 70
expression_bracket   : 
expression_list      : 56 57 58 61
for_statement        : 20
pos_statement        : 13
posx_statement       : 14
posy_statement       : 15
program              : 3 4 64 67 70 71 71 72 72 0
put_statement        : 7
repeat_statement     : 22
statement            : 1 2 3 4 31 32 34 35 36 37 38 39 39 40 41 42 46 46 47 47 48 48 49 49 50 50 51 51 52 53 53 54 54 55 55 60 61 65
up_statement         : 18
usecolor_statement   : 16
when_clause          : 68 69
when_clauses         : 66 67 69
while_statement      : 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement SEMI
    (2) program -> . statement
    (3) program -> . program statement SEMI
    (4) program -> . program statement
    (5) statement -> . expression
    (6) statement -> . def_statement
    (7) statement -> . put_statement
    (8) statement -> . add_statement
    (9) statement -> . continueup_statement
    (10) statement -> . continuedown_statement
    (11) statement -> . continueright_statement
    (12) statement -> . continueleft_statement
    (13) statement -> . pos_statement
    (14) statement -> . posx_statement
    (15) statement -> . posy_statement
    (16) statement -> . usecolor_statement
    (17) statement -> . down_statement
    (18) statement -> . up_statement
    (19) statement -> . beginning_statement
    (20) statement -> . for_statement
    (21) statement -> . case_statement
    (22) statement -> . repeat_statement
    (23) statement -> . while_statement
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MULT_OP expression
    (27) expression -> . expression DIV_OP expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression GT expression
    (30) expression -> . expression EQUALS expression
    (46) expression -> . EQUAL LPAREN statement COMMA statement RPAREN
    (47) expression -> . AND LPAREN statement COMMA statement RPAREN
    (48) expression -> . OR LPAREN statement COMMA statement RPAREN
    (49) expression -> . GREATER LPAREN statement COMMA statement RPAREN
    (50) expression -> . SMALLER LPAREN statement COMMA statement RPAREN
    (51) expression -> . SUBSTR LPAREN statement COMMA statement RPAREN
    (52) expression -> . RANDOM LPAREN statement RPAREN
    (53) expression -> . MULT LPAREN statement COMMA statement RPAREN
    (54) expression -> . DIV LPAREN statement COMMA statement RPAREN
    (55) expression -> . SUM LPAREN statement COMMA statement RPAREN
    (56) expression -> . LPAREN expression_list RPAREN
    (59) expression -> . BOOLEAN
    (62) expression -> . NUMBER
    (63) expression -> . ID
    (31) def_statement -> . DEF LPAREN ID COMMA statement RPAREN
    (32) put_statement -> . PUT LPAREN ID COMMA statement RPAREN
    (33) add_statement -> . ADD LPAREN ID RPAREN
    (34) add_statement -> . ADD LPAREN ID COMMA statement RPAREN
    (35) continueup_statement -> . CONTINUEUP statement
    (36) continuedown_statement -> . CONTINUEDOWN statement
    (37) continueright_statement -> . CONTINUERIGHT statement
    (38) continueleft_statement -> . CONTINUELEFT statement
    (39) pos_statement -> . POS LPAREN statement COMMA statement RPAREN
    (40) posx_statement -> . POSX statement
    (41) posy_statement -> . POSY statement
    (42) usecolor_statement -> . USECOLOR statement
    (43) down_statement -> . DOWN
    (44) up_statement -> . UP
    (45) beginning_statement -> . BEGINNING
    (64) for_statement -> . FOR ID LPAREN expression TO expression RPAREN LOOP LBRACKET program RBRACKET END LOOP
    (66) case_statement -> . CASE ID when_clauses END CASE
    (67) case_statement -> . CASE ID when_clauses ELSE LBRACKET program RBRACKET END CASE
    (71) repeat_statement -> . REPEAT LBRACKET program RBRACKET UNTIL LBRACKET program RBRACKET
    (72) while_statement -> . WHILE LBRACKET program RBRACKET LBRACKET program RBRACKET WHEND

    EQUAL           shift and go to state 22
    AND             shift and go to state 24
    OR              shift and go to state 25
    GREATER         shift and go to state 26
    SMALLER         shift and go to state 27
    SUBSTR          shift and go to state 28
    RANDOM          shift and go to state 29
    MULT            shift and go to state 30
    DIV             shift and go to state 31
    SUM             shift and go to state 32
    LPAREN          shift and go to state 23
    BOOLEAN         shift and go to state 33
    NUMBER          shift and go to state 34
    ID              shift and go to state 35
    DEF             shift and go to state 36
    PUT             shift and go to state 37
    ADD             shift and go to state 38
    CONTINUEUP      shift and go to state 39
    CONTINUEDOWN    shift and go to state 40
    CONTINUERIGHT   shift and go to state 41
    CONTINUELEFT    shift and go to state 42
    POS             shift and go to state 43
    POSX            shift and go to state 44
    POSY            shift and go to state 45
    USECOLOR        shift and go to state 46
    DOWN            shift and go to state 47
    UP              shift and go to state 48
    BEGINNING       shift and go to state 49
    FOR             shift and go to state 50
    CASE            shift and go to state 51
    REPEAT          shift and go to state 52
    WHILE           shift and go to state 53

    program                        shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 3
    def_statement                  shift and go to state 4
    put_statement                  shift and go to state 5
    add_statement                  shift and go to state 6
    continueup_statement           shift and go to state 7
    continuedown_statement         shift and go to state 8
    continueright_statement        shift and go to state 9
    continueleft_statement         shift and go to state 10
    pos_statement                  shift and go to state 11
    posx_statement                 shift and go to state 12
    posy_statement                 shift and go to state 13
    usecolor_statement             shift and go to state 14
    down_statement                 shift and go to state 15
    up_statement                   shift and go to state 16
    beginning_statement            shift and go to state 17
    for_statement                  shift and go to state 18
    case_statement                 shift and go to state 19
    repeat_statement               shift and go to state 20
    while_statement                shift and go to state 21

state 1

    (0) S' -> program .
    (3) program -> program . statement SEMI
    (4) program -> program . statement
    (5) statement -> . expression
    (6) statement -> . def_statement
    (7) statement -> . put_statement
    (8) statement -> . add_statement
    (9) statement -> . continueup_statement
    (10) statement -> . continuedown_statement
    (11) statement -> . continueright_statement
    (12) statement -> . continueleft_statement
    (13) statement -> . pos_statement
    (14) statement -> . posx_statement
    (15) statement -> . posy_statement
    (16) statement -> . usecolor_statement
    (17) statement -> . down_statement
    (18) statement -> . up_statement
    (19) statement -> . beginning_statement
    (20) statement -> . for_statement
    (21) statement -> . case_statement
    (22) statement -> . repeat_statement
    (23) statement -> . while_statement
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MULT_OP expression
    (27) expression -> . expression DIV_OP expression
    (28) expression -> . expression LT expression
    (29) expression -> . expression GT expression
    (30) expression -> . expression EQUALS expression
    (46) expression -> . EQUAL LPAREN statement COMMA statement RPAREN
    (47) expression -> . AND LPAREN statement COMMA statement RPAREN
    (48) expression -> . OR LPAREN statement COMMA statement RPAREN
    (49) expression -> . GREATER LPAREN statement COMMA statement RPAREN
    (50) expression -> . SMALLER LPAREN statement COMMA statement RPAREN
    (51) expression -> . SUBSTR LPAREN statement COMMA statement RPAREN
    (52) expression -> . RANDOM LPAREN statement RPAREN
    (53) expression -> . MULT LPAREN statement COMMA statement RPAREN
    (54) expression -> . DIV LPAREN statement COMMA statement RPAREN
    (55) expression -> . SUM LPAREN statement COMMA statement RPAREN
    (56) expression -> . LPAREN expression_list RPAREN
    (59) expression -> . BOOLEAN
    (62) expression -> . NUMBER
    (63) expression -> . ID
    (31) def_statement -> . DEF LPAREN ID COMMA statement RPAREN
    (32) put_statement -> . PUT LPAREN ID COMMA statement RPAREN
    (33) add_statement -> . ADD LPAREN ID RPAREN
    (34) add_statement -> . ADD LPAREN ID COMMA statement RPAREN
    (35) continueup_statement -> . CONTINUEUP statement
    (36) continuedown_statement -> . CONTINUEDOWN statement
    (37) continueright_statement -> . CONTINUERIGHT statement
    (38) continueleft_statement -> . CONTINUELEFT statement
    (39) pos_statement -> . POS LPAREN statement COMMA statement RPAREN
    (40) posx_statement -> . POSX statement
    (41) posy_statement -> . POSY statement
    (42) usecolor_statement -> . USECOLOR statement
    (43) down_statement -> . DOWN
    (44) up_statement -> . UP
    (45) beginning_statement -> . BEGINNING
    (64) for_statement -> . FOR ID LPAREN expression TO expression RPAREN LOOP LBRACKET program RBRACKET END LOOP
    (66) case_statement -> . CASE ID when_clauses END CASE
    (67) case_statement -> . CASE ID when_clauses ELSE LBRACKET program RBRACKET END CASE
    (71) repeat_statement -> . REPEAT LBRACKET program RBRACKET UNTIL LBRACKET program RBRACKET
    (72) while_statement -> . WHILE LBRACKET program RBRACKET LBRACKET program RBRACKET WHEND

    EQUAL           shift and go to state 22
    AND             shift and go to state 24
    OR              shift and go to state 25
    GREATER         shift and go to state 26
    SMALLER         shift and go to state 27
    SUBSTR          shift and go to state 28
    RANDOM          shift and go to state 29
    MULT            shift and go to state 30
    DIV             shift and go to state 31
    SUM             shift and go to state 32
    LPAREN          shift and go to state 23
    BOOLEAN         shift and go to state 33
    NUMBER          shift and go to state 34
    ID              shift and go to state 35
    DEF             shift and go to state 36
    PUT             shift and go to state 37
    ADD             shift and go to state 38
    CONTINUEUP      shift and go to state 39
    CONTINUEDOWN    shift and go to state 40
    CONTINUERIGHT   shift and go to state 41
    CONTINUELEFT    shift and go to state 42
    POS             shift and go to state 43
    POSX            shift and go to state 44
    POSY            shift and go to state 45
    USECOLOR        shift and go to state 46
    DOWN            shift and go to state 47
    UP              shift and go to state 48
    BEGINNING       shift and go to state 49
    FOR             shift and go to state 50
    CASE            shift and go to state 51
    REPEAT          shift and go to state 52
    WHILE           shift and go to state 53

    statement                      shift and go to state 54
    expression                     shift and go to state 3
    def_statement                  shift and go to state 4
    put_statement                  shift and go to state 5
    add_statement                  shift and go to state 6
    continueup_statement           shift and go to state 7
    continuedown_statement         shift and go to state 8
    continueright_statement        shift and go to state 9
    continueleft_statement         shift and go to state 10
    pos_statement                  shift and go to state 11
    posx_statement                 shift and go to state 12
    posy_statement                 shift and go to state 13
    usecolor_statement             shift and go to state 14
    down_statement                 shift and go to state 15
    up_statement                   shift and go to state 16
    beginning_statement            shift and go to state 17
    for_statement                  shift and go to state 18
    case_statement                 shift and go to state 19
    repeat_statement               shift and go to state 20
    while_statement                shift and go to state 21

state 2

    (1) program -> statement . SEMI
    (2) program -> statement .

    SEMI            shift and go to state 55
    EQUAL           reduce using rule 2 (program -> statement .)
    AND             reduce using rule 2 (program -> statement .)
    OR              reduce using rule 2 (program -> statement .)
    GREATER         reduce using rule 2 (program -> statement .)
    SMALLER         reduce using rule 2 (program -> statement .)
    SUBSTR          reduce using rule 2 (program -> statement .)
    RANDOM          reduce using rule 2 (program -> statement .)
    MULT            reduce using rule 2 (program -> statement .)
    DIV             reduce using rule 2 (program -> statement .)
    SUM             reduce using rule 2 (program -> statement .)
    LPAREN          reduce using rule 2 (program -> statement .)
    BOOLEAN         reduce using rule 2 (program -> statement .)
    NUMBER          reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    DEF             reduce using rule 2 (program -> statement .)
    PUT             reduce using rule 2 (program -> statement .)
    ADD             reduce using rule 2 (program -> statement .)
    CONTINUEUP      reduce using rule 2 (program -> statement .)
    CONTINUEDOWN    reduce using rule 2 (program -> statement .)
    CONTINUERIGHT   reduce using rule 2 (program -> statement .)
    CONTINUELEFT    reduce using rule 2 (program -> statement .)
    POS             reduce using rule 2 (program -> statement .)
    POSX            reduce using rule 2 (program -> statement .)
    POSY            reduce using rule 2 (program -> statement .)
    USECOLOR        reduce using rule 2 (program -> statement .)
    DOWN            reduce using rule 2 (program -> statement .)
    UP              reduce using rule 2 (program -> statement .)
    BEGINNING       reduce using rule 2 (program -> statement .)
    FOR             reduce using rule 2 (program -> statement .)
    CASE            reduce using rule 2 (program -> statement .)
    REPEAT          reduce using rule 2 (program -> statement .)
    WHILE           reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)
    RBRACKET        reduce using rule 2 (program -> statement .)


state 3

    (5) statement -> expression .
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . MULT_OP expression
    (27) expression -> expression . DIV_OP expression
    (28) expression -> expression . LT expression
    (29) expression -> expression . GT expression
    (30) expression -> expression . EQUALS expression

    SEMI            reduce using rule 5 (statement -> expression .)
    EQUAL           reduce using rule 5 (statement -> expression .)
    AND             reduce using rule 5 (statement -> expression .)
    OR              reduce using rule 5 (statement -> expression .)
    GREATER         reduce using rule 5 (statement -> expression .)
    SMALLER         reduce using rule 5 (statement -> expression .)
    SUBSTR          reduce using rule 5 (statement -> expression .)
    RANDOM          reduce using rule 5 (statement -> expression .)
    MULT            reduce using rule 5 (statement -> expression .)
    DIV             reduce using rule 5 (statement -> expression .)
    SUM             reduce using rule 5 (statement -> expression .)
    LPAREN          reduce using rule 5 (statement -> expression .)
    BOOLEAN         reduce using rule 5 (statement -> expression .)
    NUMBER          reduce using rule 5 (statement -> expression .)
    ID              reduce using rule 5 (statement -> expression .)
    DEF             reduce using rule 5 (statement -> expression .)
    PUT             reduce using rule 5 (statement -> expression .)
    ADD             reduce using rule 5 (statement -> expression .)
    CONTINUEUP      reduce using rule 5 (statement -> expression .)
    CONTINUEDOWN    reduce using rule 5 (statement -> expression .)
    CONTINUERIGHT   reduce using rule 5 (statement -> expression .)
    CONTINUELEFT    reduce using rule 5 (statement -> expression .)
    POS             reduce using rule 5 (statement -> expression .)
    POSX            reduce using rule 5 (statement -> expression .)
    POSY            reduce using rule 5 (statement -> expression .)
    USECOLOR        reduce using rule 5 (statement -> expression .)
    DOWN            reduce using rule 5 (statement -> expression .)
    UP              reduce using rule 5 (statement -> expression .)
    BEGINNING       reduce using rule 5 (statement -> expression .)
    FOR             reduce using rule 5 (statement -> expression .)
    CASE            reduce using rule 5 (statement -> expression .)
    REPEAT          reduce using rule 5 (statement -> expression .)
    WHILE           reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    RPAREN          reduce using rule 5 (statement -> expression .)
    COMMA           reduce using rule 5 (statement -> expression .)
    RBRACKET        reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    MULT_OP         shift and go to state 58
    DIV_OP          shift and go to state 59
    LT              shift and go to state 60
    GT              shift and go to state 61
    EQUALS          shift and go to state 62


state 4

    (6) statement -> def_statement .

    SEMI            reduce using rule 6 (statement -> def_statement .)
    EQUAL           reduce using rule 6 (statement -> def_statement .)
    AND             reduce using rule 6 (statement -> def_statement .)
    OR              reduce using rule 6 (statement -> def_statement .)
    GREATER         reduce using rule 6 (statement -> def_statement .)
    SMALLER         reduce using rule 6 (statement -> def_statement .)
    SUBSTR          reduce using rule 6 (statement -> def_statement .)
    RANDOM          reduce using rule 6 (statement -> def_statement .)
    MULT            reduce using rule 6 (statement -> def_statement .)
    DIV             reduce using rule 6 (statement -> def_statement .)
    SUM             reduce using rule 6 (statement -> def_statement .)
    LPAREN          reduce using rule 6 (statement -> def_statement .)
    BOOLEAN         reduce using rule 6 (statement -> def_statement .)
    NUMBER          reduce using rule 6 (statement -> def_statement .)
    ID              reduce using rule 6 (statement -> def_statement .)
    DEF             reduce using rule 6 (statement -> def_statement .)
    PUT             reduce using rule 6 (statement -> def_statement .)
    ADD             reduce using rule 6 (statement -> def_statement .)
    CONTINUEUP      reduce using rule 6 (statement -> def_statement .)
    CONTINUEDOWN    reduce using rule 6 (statement -> def_statement .)
    CONTINUERIGHT   reduce using rule 6 (statement -> def_statement .)
    CONTINUELEFT    reduce using rule 6 (statement -> def_statement .)
    POS             reduce using rule 6 (statement -> def_statement .)
    POSX            reduce using rule 6 (statement -> def_statement .)
    POSY            reduce using rule 6 (statement -> def_statement .)
    USECOLOR        reduce using rule 6 (statement -> def_statement .)
    DOWN            reduce using rule 6 (statement -> def_statement .)
    UP              reduce using rule 6 (statement -> def_statement .)
    BEGINNING       reduce using rule 6 (statement -> def_statement .)
    FOR             reduce using rule 6 (statement -> def_statement .)
    CASE            reduce using rule 6 (statement -> def_statement .)
    REPEAT          reduce using rule 6 (statement -> def_statement .)
    WHILE           reduce using rule 6 (statement -> def_statement .)
    $end            reduce using rule 6 (statement -> def_statement .)
    RPAREN          reduce using rule 6 (statement -> def_statement .)
    COMMA           reduce using rule 6 (statement -> def_statement .)
    RBRACKET        reduce using rule 6 (statement -> def_statement .)


state 5

    (7) statement -> put_statement .

    SEMI            reduce using rule 7 (statement -> put_statement .)
    EQUAL           reduce using rule 7 (statement -> put_statement .)
    AND             reduce using rule 7 (statement -> put_statement .)
    OR              reduce using rule 7 (statement -> put_statement .)
    GREATER         reduce using rule 7 (statement -> put_statement .)
    SMALLER         reduce using rule 7 (statement -> put_statement .)
    SUBSTR          reduce using rule 7 (statement -> put_statement .)
    RANDOM          reduce using rule 7 (statement -> put_statement .)
    MULT            reduce using rule 7 (statement -> put_statement .)
    DIV             reduce using rule 7 (statement -> put_statement .)
    SUM             reduce using rule 7 (statement -> put_statement .)
    LPAREN          reduce using rule 7 (statement -> put_statement .)
    BOOLEAN         reduce using rule 7 (statement -> put_statement .)
    NUMBER          reduce using rule 7 (statement -> put_statement .)
    ID              reduce using rule 7 (statement -> put_statement .)
    DEF             reduce using rule 7 (statement -> put_statement .)
    PUT             reduce using rule 7 (statement -> put_statement .)
    ADD             reduce using rule 7 (statement -> put_statement .)
    CONTINUEUP      reduce using rule 7 (statement -> put_statement .)
    CONTINUEDOWN    reduce using rule 7 (statement -> put_statement .)
    CONTINUERIGHT   reduce using rule 7 (statement -> put_statement .)
    CONTINUELEFT    reduce using rule 7 (statement -> put_statement .)
    POS             reduce using rule 7 (statement -> put_statement .)
    POSX            reduce using rule 7 (statement -> put_statement .)
    POSY            reduce using rule 7 (statement -> put_statement .)
    USECOLOR        reduce using rule 7 (statement -> put_statement .)
    DOWN            reduce using rule 7 (statement -> put_statement .)
    UP              reduce using rule 7 (statement -> put_statement .)
    BEGINNING       reduce using rule 7 (statement -> put_statement .)
    FOR             reduce using rule 7 (statement -> put_statement .)
    CASE            reduce using rule 7 (statement -> put_statement .)
    REPEAT          reduce using rule 7 (statement -> put_statement .)
    WHILE           reduce using rule 7 (statement -> put_statement .)
    $end            reduce using rule 7 (statement -> put_statement .)
    RPAREN          reduce using rule 7 (statement -> put_statement .)
    COMMA           reduce using rule 7 (statement -> put_statement .)
    RBRACKET        reduce using rule 7 (statement -> put_statement .)


state 6

    (8) statement -> add_statement .

    SEMI            reduce using rule 8 (statement -> add_statement .)
    EQUAL           reduce using rule 8 (statement -> add_statement .)
    AND             reduce using rule 8 (statement -> add_statement .)
    OR              reduce using rule 8 (statement -> add_statement .)
    GREATER         reduce using rule 8 (statement -> add_statement .)
    SMALLER         reduce using rule 8 (statement -> add_statement .)
    SUBSTR          reduce using rule 8 (statement -> add_statement .)
    RANDOM          reduce using rule 8 (statement -> add_statement .)
    MULT            reduce using rule 8 (statement -> add_statement .)
    DIV             reduce using rule 8 (statement -> add_statement .)
    SUM             reduce using rule 8 (statement -> add_statement .)
    LPAREN          reduce using rule 8 (statement -> add_statement .)
    BOOLEAN         reduce using rule 8 (statement -> add_statement .)
    NUMBER          reduce using rule 8 (statement -> add_statement .)
    ID              reduce using rule 8 (statement -> add_statement .)
    DEF             reduce using rule 8 (statement -> add_statement .)
    PUT             reduce using rule 8 (statement -> add_statement .)
    ADD             reduce using rule 8 (statement -> add_statement .)
    CONTINUEUP      reduce using rule 8 (statement -> add_statement .)
    CONTINUEDOWN    reduce using rule 8 (statement -> add_statement .)
    CONTINUERIGHT   reduce using rule 8 (statement -> add_statement .)
    CONTINUELEFT    reduce using rule 8 (statement -> add_statement .)
    POS             reduce using rule 8 (statement -> add_statement .)
    POSX            reduce using rule 8 (statement -> add_statement .)
    POSY            reduce using rule 8 (statement -> add_statement .)
    USECOLOR        reduce using rule 8 (statement -> add_statement .)
    DOWN            reduce using rule 8 (statement -> add_statement .)
    UP              reduce using rule 8 (statement -> add_statement .)
    BEGINNING       reduce using rule 8 (statement -> add_statement .)
    FOR             reduce using rule 8 (statement -> add_statement .)
    CASE            reduce using rule 8 (statement -> add_statement .)
    REPEAT          reduce using rule 8 (statement -> add_statement .)
    WHILE           reduce using rule 8 (statement -> add_statement .)
    $end            reduce using rule 8 (statement -> add_statement .)
    RPAREN          reduce using rule 8 (statement -> add_statement .)
    COMMA           reduce using rule 8 (statement -> add_statement .)
    RBRACKET        reduce using rule 8 (statement -> add_statement .)


state 7

    (9) statement -> continueup_statement .

    SEMI            reduce using rule 9 (statement -> continueup_statement .)
    EQUAL           reduce using rule 9 (statement -> continueup_statement .)
    AND             reduce using rule 9 (statement -> continueup_statement .)
    OR              reduce using rule 9 (statement -> continueup_statement .)
    GREATER         reduce using rule 9 (statement -> continueup_statement .)
    SMALLER         reduce using rule 9 (statement -> continueup_statement .)
    SUBSTR          reduce using rule 9 (statement -> continueup_statement .)
    RANDOM          reduce using rule 9 (statement -> continueup_statement .)
    MULT            reduce using rule 9 (statement -> continueup_statement .)
    DIV             reduce using rule 9 (statement -> continueup_statement .)
    SUM             reduce using rule 9 (statement -> continueup_statement .)
    LPAREN          reduce using rule 9 (statement -> continueup_statement .)
    BOOLEAN         reduce using rule 9 (statement -> continueup_statement .)
    NUMBER          reduce using rule 9 (statement -> continueup_statement .)
    ID              reduce using rule 9 (statement -> continueup_statement .)
    DEF             reduce using rule 9 (statement -> continueup_statement .)
    PUT             reduce using rule 9 (statement -> continueup_statement .)
    ADD             reduce using rule 9 (statement -> continueup_statement .)
    CONTINUEUP      reduce using rule 9 (statement -> continueup_statement .)
    CONTINUEDOWN    reduce using rule 9 (statement -> continueup_statement .)
    CONTINUERIGHT   reduce using rule 9 (statement -> continueup_statement .)
    CONTINUELEFT    reduce using rule 9 (statement -> continueup_statement .)
    POS             reduce using rule 9 (statement -> continueup_statement .)
    POSX            reduce using rule 9 (statement -> continueup_statement .)
    POSY            reduce using rule 9 (statement -> continueup_statement .)
    USECOLOR        reduce using rule 9 (statement -> continueup_statement .)
    DOWN            reduce using rule 9 (statement -> continueup_statement .)
    UP              reduce using rule 9 (statement -> continueup_statement .)
    BEGINNING       reduce using rule 9 (statement -> continueup_statement .)
    FOR             reduce using rule 9 (statement -> continueup_statement .)
    CASE            reduce using rule 9 (statement -> continueup_statement .)
    REPEAT          reduce using rule 9 (statement -> continueup_statement .)
    WHILE           reduce using rule 9 (statement -> continueup_statement .)
    $end            reduce using rule 9 (statement -> continueup_statement .)
    RPAREN          reduce using rule 9 (statement -> continueup_statement .)
    COMMA           reduce using rule 9 (statement -> continueup_statement .)
    RBRACKET        reduce using rule 9 (statement -> continueup_statement .)


state 8

    (10) statement -> continuedown_statement .
